src/test/resources/frontend/fail/enumMap.skill
fail {
	map<E,E> f;
}

enum E {
	a,b;
}